feat: cliente_http y parser_http

--- a/resources/index.html
+++ b/resources/index.html
@@ -2,11 +2,8 @@
     <body>
         Servidor de Redis
     </body>
-    <form action='#' method='GET'>
-        <div class="form-group">
-          <label for="comando">Comando</label>
-          <input type="text" class="form-control" id="comando" placeholder="SET KEY 1">
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <form action="" method="post">
+        Comando <input type="text" name="comando">
+        <input type="submit" value="Enviar">
     </form>
 </html>
