--- a/resources/index.html
+++ b/resources/index.html
@@ -6,7 +6,7 @@
     <div id = 'header'> <FONT FACE="monospace" WEIGHT= bold SIZE=6 COLOR= #262626> Redis REPL By 2Rusticos</FONT></div>
     <div id = 'log'></div>
     <div id = 'comando'>
-      <input id="input" type="text" placeholder= 'SET KEY VALUE'>
+      <input id="input" type="text" placeholder= '> Comando'>
       <button id="boton-envio" onclick="addcode()"> Enviar </button>
     </div>
       
@@ -96,12 +96,10 @@
         margin:auto;
         margin-top:1em;
         padding:0em;
-        padding-top:0.25em;
-        padding-bottom:0.25em;
+        padding: 30px 0;
         border:5px solid #595540;
         text-align:center;
         vertical-align: center;
-        height:6%;
         width:500px;
         font-weight: bold;
         background-color:#cc8139
