--- a/resources/index.html
+++ b/resources/index.html
@@ -32,6 +32,7 @@
 
       function addcode(){
         var str = document.getElementById("input").value;
+        document.getElementById("input").value = "";
         var xhr = new XMLHttpRequest();
 
         mostrar("> " + str,"#595540");
@@ -39,26 +40,24 @@
         xhr.onload = function () {
           // do something to response
             if ( xhr.readyState == 4 &&  xhr.status == 200) {            
-              if (this.responseText != "HELP") {
+              if (!this.responseText.includes("ComandoError")) {
                 mostrar(this.responseText,"#000")                
               } else {
                 var str = '(error) No es un comando conocido. Los comandos implementados son : COPY,DEL,EXISTS,RENAME,EXPIRE,EXPIREAT,PERSIST,TTL,TOUCH,KEYS,SORT,TYPE,LINDEX,LPOP,RPOP,LPUSH,LPUSHX,RPUSH,RPUSHX,LRANGE,LREM,\nLSET,LLEN,SADD,SCARD,SISMEMBER,SMEMBERS,SREM,GET,SET,APPEND,STRLEN,INCRBY,DECRBY,MGET,MSET,GETSET,GETDEL,FLUSHDB,DBSIZE,CONFIG,INFO,PING';
                 mostrar(str,"#000")
               }
-
-              
             }
-          var element = document.getElementById("log");
-          element.scrollTop = element.scrollHeight;
+          auto_scroll();
         };
-
-        
-
-
         xhr.open('POST', '/');
         xhr.setRequestHeader("Content-Type", "application/x-www-form-urlencoded");
         xhr.setRequestHeader('Accept', 'text/plain');
         xhr.send(("comando="+str).replace(/\s/g, "+"));
+      }
+
+      function auto_scroll(){
+        var element = document.getElementById("log");
+        element.scrollTop = element.scrollHeight;
       }
 
       function pantalla_llena(){
